Fix lighthouse accessibility issues

--- a/baseapp/templates/contact.html
+++ b/baseapp/templates/contact.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="col-lg-6">
-        <h1 class="display-5 fw-bold lh-1 mb-3">Contact Us</h1>
+        <h2 class="display-5 fw-bold lh-1 mb-3 fs-1">Contact Us</h2>
         <p class="lead">Please use the form below or email us at: email@email.com, and we'll hasten to assist you to your satisfaction.</p>
         <p class="lead">We live by our motto: No man left behind :D</p>
       </div>
@@ -46,7 +46,7 @@
           <label for="textarea">Message</label>
         </div>
 
-        <button type="submit" class="btn btn-primary">Send Away</button>
+        <button type="submit" class="btn btn-primary" aria-label="Submit">Send Away</button>
 
       </form>
 
