--- a/baseapp/templates/index.html
+++ b/baseapp/templates/index.html
@@ -6,7 +6,7 @@
 
     <h2 class="display-4 fw-bold">Simply Bookable</h2>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Simply put, we take care of all your bookings and make it easy for your customers to book while at the same time, booking management is simple. We believe you should be focusing on what you love doing most.</p>
+      <p class="lead mb-4">Simply put, we take care of all your bookings and make it easy for your customers to book while, at the same time, booking management is simple. We believe you should be focusing on what you love doing most.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
         <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'account_signup' %}" role="button">Register</a>
         <a class="btn btn-outline-dark btn-lg px-4" href="/contact/" role="button">Contact</a>
@@ -24,9 +24,9 @@
   <div class="bg-dark text-secondary px-4 py-5 text-center">
     <div class="py-5">
 
-      <h2 class="display-5 fw-bold text-white">Why Bookable</h2>
+      <h3 class="display-5 fw-bold text-white fs-2">Why Bookable</h3>
       <div class="col-lg-6 mx-auto">
-        <p class="fs-5 mb-4 text-white">Bookable is simple, straightforward, easy, fast, and reliable. Bookable can handle millions of requests anytime and is still room for more, so your bookings will never be interrupted.</p>
+        <p class="fs-5 mb-4 text-white">Bookable is simple, straightforward, easy, fast, and reliable. Bookable can handle millions of requests anytime and is still has room for more, so your bookings will never be interrupted.</p>
       </div>
 
     </div>
@@ -40,7 +40,7 @@
       </div>
 
       <div class="col-lg-6">
-        <h2 class="display-5 fw-bold lh-1 mb-3">Booking List</h2>
+        <h3 class="display-5 fw-bold lh-1 mb-3 fs-2">Booking List</h3>
         <p class="lead">See all bookings in a simple, not cluttered view or distractions. For every booking, essential details are there for you to take action quickly.</p>
         <div class="d-grid gap-2 d-flex justify-content-md-start">
           <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260303/static/media/calendar.75020cab19ec.png" class="d-block opacity-50" alt="calender icon" width="48" height="30" loading="lazy">
@@ -59,7 +59,7 @@
       </div>
 
       <div class="col-lg-6">
-        <h2 class="display-5 fw-bold lh-1 mb-3">Booking Page</h2>
+        <h3 class="display-5 fw-bold lh-1 mb-3 fs-2">Booking Page</h3>
         <p class="lead">You get a beautiful and converting booking page straight to the point with no distractions. All information your customer needs or would want is easily accessible to them.</p>
         <div class="d-grid gap-2 d-flex justify-content-md-start">
           <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260302/static/media/info.efe801d1e90d.png" class="d-block opacity-50" alt="calender icon" width="15" height="30" loading="lazy">
@@ -78,7 +78,7 @@
       </div>
 
       <div class="col-lg-6">
-        <h2 class="display-5 fw-bold lh-1 mb-3">Company Info</h2>
+        <h3 class="display-5 fw-bold lh-1 mb-3 fs-2">Company Info</h3>
         <p class="lead">Add, edit and delete your company information quickly in your account by pressing one button. We've made it our mission for our app to be simple, easy, and on point.</p>
         <div class="d-grid gap-2 d-flex justify-content-md-start">
           <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260304/static/media/company-glyph.bd63ba2814f6.png" class="d-block opacity-50" alt="calender icon" width="30" height="30" loading="lazy">
@@ -94,17 +94,17 @@
 
       <div class="col-md-6 mb-3 mb-sm-0">
         <div class="h-100 p-5 text-bg-dark bg-gradient rounded-3">
-          <h2>Join us today</h2>
+          <h4 class="fs-2">Join us today</h4>
           <p>Missed and forgotten appointments are of the past; no more frustrations. Together we move into a new era, building a solid business.</p>
-          <a class="btn btn-outline-light" href="{% url 'account_signup' %}" role="button">Join Us</a>
+          <a class="btn btn-outline-light" href="{% url 'account_signup' %}" role="button" aria-label="Register">Join Us</a>
         </div>
       </div>
 
       <div class="col-md-6 question">
         <div class="h-100 p-5 text-bg-secondary bg-gradient border rounded-3">
-          <h2>Got a question or two?</h2>
+          <h4 class="fs-2">Got a question or two?</h4>
           <p>Don't let us keep you waiting. Send us an email, and we'll be more than happy to answer all questions you may have. We stand ready to assist you in your journey.</p>
-          <a class="btn btn-outline-light" href="/contact/" role="button">Contact Us</a>
+          <a class="btn btn-outline-light" href="/contact/" role="button" aria-label="Contact Us">Contact Us</a>
         </div>
       </div>
 
