--- a/booking/templates/booking/book_does_not_exist.html
+++ b/booking/templates/booking/book_does_not_exist.html
@@ -11,8 +11,8 @@
 
           <h2 class="px-0">Item Does Not Exist</h2>
           <div class="col col-md-4 d-grid gap-3 px-0">
-            <h6 class="mb-3 px-0">Make a new booking?</h6>
-            <a class="btn btn-outline-primary" href="/booking/{{ obj.slug }}/">Book Now</a>
+            <h3 class="mb-3 px-0 fs-6">Make a new booking?</h3>
+            <a class="btn btn-outline-primary" href="/booking/{{ obj.slug }}/" aria-label="Book Now">Book Now</a>
           </div>
 
         </div>
