--- a/booking/templates/booking/book_duplicate.html
+++ b/booking/templates/booking/book_duplicate.html
@@ -4,16 +4,16 @@
 
   <div class="container-sm mt-5 mt-sm-0 pt-5 pt-sm-0 booking">
     <div class="row justify-content-center">
-      <!-- Booking Customer Spots Filled -->
+      <!-- Booking Customer Duplicate -->
 
       <div class="col-md-6 mt-3">
         <div class="row gap-3">
 
           <h2 class="px-0">Oops..</h2>
-          <h6 class="mb-3 px-0">You've already got a booking on {{ date_time }}</h6>
+          <h3 class="mb-3 px-0 fs-6">You've already got a booking on {{ date_time }}</h3>
           <div class="btn-group w-100" role="group" aria-label="Decision buttons">
-            <a class="btn btn-primary btn-sm" href="javascript:history.back()">Go Back</a>
-            <a class="btn btn-outline-success btn-sm" href="/booking/{{ slug }}/thank-you/{{ id }}/">Go To Booking</a>
+            <a class="btn btn-primary btn-sm" href="javascript:history.back()" aria-label="Go Back">Go Back</a>
+            <a class="btn btn-outline-success btn-sm" href="/booking/{{ slug }}/thank-you/{{ id }}/" aria-label="Go To Booking">Go To Booking</a>
           </div>
 
         </div>
