--- a/booking/templates/booking/book_form_not_valid.html
+++ b/booking/templates/booking/book_form_not_valid.html
@@ -25,7 +25,7 @@
             <div class="container">
               <div class="row justify-content-start">
                 <div class="col">
-                  <span>Please try again </span><a href="javascript:history.back()">here</a>
+                  <span>Please try again </span><a href="javascript:history.back()" aria-label="Go Back">here</a>
                 </div>
               </div>
             </div>
