--- a/booking/templates/booking/book_spots_filled.html
+++ b/booking/templates/booking/book_spots_filled.html
@@ -10,8 +10,8 @@
         <div class="row">
 
           <h2 class="px-0">Oh.No..</h2>
-          <h6 class="mb-3 px-0">All spots are filled on {{ date_time }}</h6>
-          <a class="btn btn-outline-primary btn-sm" href="javascript:history.back()">Go Back</a>
+          <h3 class="mb-3 px-0 fs-6">All spots are filled on {{ date_time }}</h3>
+          <a class="btn btn-outline-primary btn-sm" href="javascript:history.back()" aria-label="Go Back">Go Back</a>
 
         </div>
       </div>
