--- a/company/templates/company/exists.html
+++ b/company/templates/company/exists.html
@@ -15,8 +15,8 @@
             <strong>Error:</strong> Company Name Already Exists!
           </div>
 
-          <span>Try again <a href="{% url 'company_account' %}">here</a></span>
-          <span>Delete account <a href="{% url 'company_delete' %}">here</a></span>
+          <span>Try again <a href="{% url 'company_account' %}" aria-label="Go Back">here</a></span>
+          <span>Delete account <a href="{% url 'company_delete' %}" aria-label="Delete Account">here</a></span>
 
           {% endif %}
 
