--- a/company/templates/company/offcanvas_company_info.html
+++ b/company/templates/company/offcanvas_company_info.html
@@ -25,8 +25,8 @@
       <p><b>Company id:</b> {{ company_id }}</p>
     </div>
     <div class="btn-group btn-group-sm w-100 mt-1" role="group" aria-label="Account buttons">
-      <a class="btn btn-secondary" href="{% url 'company_edit' %}">Edit Company Info</a>
-      <a class="btn btn-danger" href="{% url 'company_delete' %}">Delete Account</a>
+      <a class="btn btn-secondary" href="{% url 'company_edit' %}" aria-label="Edit Company Info">Edit Company Info</a>
+      <a class="btn btn-danger" href="{% url 'company_delete' %}" aria-label="Delete Account">Delete Account</a>
     </div>
   </div>
 
