--- a/templates/500.html
+++ b/templates/500.html
@@ -10,7 +10,7 @@
         <div class="row">
 
           <h2 class="px-0 error">500 Internal Server Error</h2>
-          <h6 class="mb-3 px-0">Oops.. Server encountered an unexpected condition.</h6>
+          <h3 class="mb-3 px-0 fs-6">Oops.. Server encountered an unexpected condition.</h3>
           <a class="btn btn-outline-primary btn-sm" href="javascript:history.back()">Go Back!</a>
 
         </div>
