--- a/templates/base.html
+++ b/templates/base.html
@@ -67,14 +67,14 @@
         <span class="brand">Booka</span><span class="thin">ble</span>
       </a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-label="Menu Button" aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
 
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+          <p class="offcanvas-title fs-5" id="offcanvasNavbarLabel">Menu</p>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
 
@@ -132,8 +132,8 @@
   <footer class="footer mt-auto py-3 dark-bg">
     <div class="container-sm d-flex align-items-center gap-2 gap-md-3">
       <p class="m-0 text-center text-white">@MTraveller</p>
-      <a class="ms-2 ms-md-3 text-decoration-none" href="https://github.com/MTraveller" target="_blank"><i class="fa-brands fa-square-github text-light fs-3 text fst-normal"></i></a>
-      <a class="ms-2 ms-md-3 text-decoration-none" href="https://www.linkedin.com/in/mtantouri/" target="_blank"><i class="fa-brands fa-linkedin text-light fs-3 text fst-normal"></i></a>
+      <a class="ms-2 ms-md-3 text-decoration-none" href="https://github.com/MTraveller" target="_blank" aria-label="Github"><i class="fa-brands fa-square-github text-light fs-3 text fst-normal"></i></a>
+      <a class="ms-2 ms-md-3 text-decoration-none" href="https://www.linkedin.com/in/mtantouri/" target="_blank" aria-label="Linkedin"><i class="fa-brands fa-linkedin text-light fs-3 text fst-normal"></i></a>
     </div>
 
     <!--Load Scripts-->
