--- a/booking/templates/booking/book_deleted.html
+++ b/booking/templates/booking/book_deleted.html
@@ -10,8 +10,8 @@
         <div class="row">
 
           <h2 class="px-0">Booking Deleted</h2>
-          <h6 class="mb-3 px-0">Make a new booking?</h6>
-          <a class="btn btn-outline-primary btn-sm" href="/booking/{{ kwargs.slug }}/">Book Now</a>
+          <h3 class="mb-3 px-0 fs-6">Make a new booking?</h3>
+          <a class="btn btn-outline-primary btn-sm" href="/booking/{{ kwargs.slug }}/" aria-label="Book Now">Book Now</a>
 
         </div>
       </div>
