--- a/booking/templates/booking/book_thankyou.html
+++ b/booking/templates/booking/book_thankyou.html
@@ -8,9 +8,9 @@
 
       <div class="d-flex gap-4 mb-5 justify-content-between align-items-center">
         <h2>Thank You!</h2>
-        <h6>
+        <h3 class="fs-6">
           <u>{{ obj.company.company_name }}</u> has received your booking.
-        </h6>
+        </h3>
       </div>
 
       <div class="col-sm-10 text-center">
@@ -24,7 +24,7 @@
             <div class="col-sm-6 col-md-4">
               <p class="mb-0 fs-5 fw-semibold">Phone:</p>
               <p class="fs-3 fw-bold">
-                <a href="tel:{{ company_phone }}">{{ obj.company.phone }}</a>
+                <a href="tel:{{ company_phone }}" aria-label="Company Phone Number">{{ obj.company.phone }}</a>
               </p>
             </div>
           </div>
@@ -42,10 +42,10 @@
           <div class="row mb-md-5 align-items-center">
             <div class="col-sm-6 mb-3 mb-md-0">
               <p class="mb-0 fs-5 fw-semibold">Share:</p>
-              <a class="mt-1 text-dark fs-3 fw-bold" href="{{ direction }}" target="_blank">Directions</a>
+              <a class="mt-1 text-dark fs-3 fw-bold" href="{{ direction }}" target="_blank" aria-label="Directions">Directions</a>
             </div>
             <div class="col-sm-6">
-              <a class="btn btn-warning" href="{{ request.build_absolute_uri }}delete/">Delete Booking</a>
+              <a class="btn btn-warning" href="{{ request.build_absolute_uri }}delete/" aria-label="Delete Booking">Delete Booking</a>
             </div>
           </div>
 
@@ -53,7 +53,7 @@
             <div class="col-sm-6 d-flex w-auto gap-3 py-3 align-items-center">
               <p class="d-inline mb-0 fs-5 fw-semibold">URL:</p>
               <p id="booking-url" class="d-none d-xl-block mb-0 text-dark fs-5 fw-bold">{{ request.build_absolute_uri }}</p>
-              <button id="copyBtn" type="button" class="btn btn-light" style="height: 1.8rem; --bs-btn-padding-y: 0; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .7rem;" onclick="copyURL()">Copy URL</button>
+              <button id="copyBtn" type="button" class="btn btn-light" style="height: 1.8rem; --bs-btn-padding-y: 0; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .7rem;" onclick="copyURL()" aria-label="Copy URL">Copy URL</button>
             </div>
             <script>
               async function copyURL() {
