--- a/company/templates/company/cloudinary.html
+++ b/company/templates/company/cloudinary.html
@@ -3,7 +3,7 @@
 {% load cloudinary %}
 {% cloudinary_includes %}
 {% cloudinary_js_config %}
-  <script type="text/javascript">
+  <script>
     $(function() {
       if($.fn.cloudinary_fileupload !== undefined) {
         $("input.cloudinary-fileupload[type=file]").cloudinary_fileupload();
