--- a/company/templates/company/edit_company.html
+++ b/company/templates/company/edit_company.html
@@ -12,7 +12,7 @@
 
           {% if user.is_authenticated %}
           <h2>Edit {{ data.company_name }}</h2>
-          <h6>Use this form to change company information.</h6>
+          <h3 class="fs-6">Use this form to change company information.</h3>
 
           <p id="edit_current_image">Current Image: {{ dbm.brand_image|safe }}</p>
 
@@ -20,8 +20,8 @@
             {% csrf_token %}
             {{ company_form | crispy }}
             <div class="btn-group btn-group-lg w-100 mt-4" role="group" aria-label="Form buttons">
-              <a class="btn btn-success" href="{% url 'company_account' %}">All Good</a>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <a class="btn btn-success" href="{% url 'company_account' %}" aria-label="Go Back">All Good</a>
+              <button type="submit" class="btn btn-primary" aria-label="Submit Deletion">Submit</button>
             </div>
           </form>
 
