--- a/templates/400.html
+++ b/templates/400.html
@@ -10,7 +10,7 @@
         <div class="row">
 
           <h2 class="px-0 error">400 Bad Request</h2>
-          <h6 class="mb-3 px-0">Oops.. Invalid request.</h6>
+          <h3 class="mb-3 px-0 fs-6">Oops.. Invalid request.</h3>
           <a class="btn btn-outline-primary btn-sm" href="javascript:history.back()">Go Back!</a>
 
         </div>
