--- a/templates/404.html
+++ b/templates/404.html
@@ -10,7 +10,7 @@
         <div class="row">
 
           <h2 class="px-0 error">404 Not Found</h2>
-          <h6 class="mb-3 px-0">Oops.. Couldn't locate the page.</h6>
+          <h3 class="mb-3 px-0 fs-6">Oops.. Couldn't locate the page.</h3>
           <a class="btn btn-outline-primary btn-sm" href="javascript:history.back()">Go Back!</a>
 
         </div>
