--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -10,7 +10,7 @@
   <div class="row justify-content-center">
     <div class="col-md-6 mt-3">
 
-    <h3>{% trans "Sign In" %}</h3>
+    <h2 class="fs-3">{% trans "Sign In" %}</h2>
 
     <p>{% blocktrans %}If you have not created an account yet, then please
     <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
