--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -9,7 +9,7 @@
 <div class="container mt-5 mt-sm-0 pt-5 pt-sm-0">
   <div class="row justify-content-center">
     <div class="col-md-6 mt-3">
-      <h3>{% trans "Sign Out" %}</h3>
+      <h2 class="fs-3">{% trans "Sign Out" %}</h2>
 
       <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
