--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -10,7 +10,7 @@
   <div class="row justify-content-center">
     <div class="col-md-6 mt-3">
 
-      <h3>{% trans "Sign Up" %}</h3>
+      <h2 class="fs-3">{% trans "Sign Up" %}</h2>
 
       <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
