--- a/templates/base.html
+++ b/templates/base.html
@@ -79,30 +79,32 @@
         </div>
 
         <div class="offcanvas-body">
-
+          <!-- Active class based on https://stackoverflow.com/a/55151707 -->
+          {% with request.resolver_match.url_name as url_name %}
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+              <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/contact/">Contact</a>
+              <a class="nav-link {% if url_name == 'contact' %}active{% endif %}" aria-current="page" href="/contact/">Contact</a>
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'company_account' %}">Account</a>
+              <a class="nav-link {% if url_name == 'company_account' %}active{% endif %}" href="{% url 'company_account' %}">Account</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+              <a class="nav-link {% if url_name == 'account_logout' %}active{% endif %}" href="{% url 'account_logout' %}">Logout</a>
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+              <a class="nav-link {% if url_name == 'account_signup' %}active{% endif %}" href="{% url 'account_signup' %}">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+              <a class="nav-link {% if url_name == 'account_login' %}active{% endif %}" href="{% url 'account_login' %}">Login</a>
             </li>
             {% endif %}
           </ul>
+          {% endwith %}
 
           {% if user.is_authenticated %}
           <span class="navbar-text signed-in">
