--- a/baseapp/templates/contact.html
+++ b/baseapp/templates/contact.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
+{% load static %}
 {% block content %}
 
   <div class="container col-xxl-8 px-4 py-5">
     <div class="row flex-lg-row-reverse justify-content-center align-items-center g-5 py-5">
 
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260303/static/media/world-booking.24bd0d19c1b7.png" class="d-block mx-lg-auto img-fluid" alt="world booking" width="700" height="394" loading="lazy">
+        <img src="{% static 'media/world-booking.png' %}" class="d-block mx-lg-auto img-fluid" alt="world booking" width="700" height="394" loading="lazy">
       </div>
 
       <div class="col-lg-6">
