--- a/templates/base.html
+++ b/templates/base.html
@@ -3,160 +3,160 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
 
-<head>
+  <head>
 
-  <!--Preconnect-->
-  <link rel="preconnect" href="https://res.cloudinary.com/">
-  <link rel="preconnect" href="https://cdnjs.cloudflare.com/">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preconnect" href="https://fonts.googleapis.com/">
-  <link rel="preconnect" href="https://cdn.jsdelivr.net">
+    <!--Preconnect-->
+    <link rel="preconnect" href="https://res.cloudinary.com/">
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
+    <link rel="preconnect" href="https://cdn.jsdelivr.net">
 
-  <!--Load favicon-->
-  <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661260307/static/media/favicon.a009085fa82e.ico">
+    <!--Load favicon-->
+    <link rel="icon" type="image/x-icon" href="{% static 'media/favicon.ico' %}">
 
-  <!--Load font-->
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="preload" as="style">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
+    <!--Load font-->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="preload" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
 
-  <!--Primary Meta Tags-->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="title" content="Bookable - Booking Made Simple">
-  <meta name="description" content="Bookable is a Django app for companies looking to accept bookings online">
-  <meta name="author" content="MT - MTraveller, https://github.com/MTraveller/bookable">
+    <!--Primary Meta Tags-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="title" content="Bookable - Booking Made Simple">
+    <meta name="description" content="Bookable is a Django app for companies looking to accept bookings online">
+    <meta name="author" content="MT - MTraveller, https://github.com/MTraveller/bookable">
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://mt-bookable.herokuapp.com/">
-  <meta property="og:title" content="Bookable - Booking Made Simple">
-  <meta property="og:description" content="Bookable is a Django app for companies looking to accept bookings online">
-  <meta property="og:image" content="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661364639/static/media/social-media-card.151a46799220.jpg">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mt-bookable.herokuapp.com/">
+    <meta property="og:title" content="Bookable - Booking Made Simple">
+    <meta property="og:description" content="Bookable is a Django app for companies looking to accept bookings online">
+    <meta property="og:image" content="{% static 'media/social-media-card.jpg' %}">
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://mt-bookable.herokuapp.com/">
-  <meta property="twitter:title" content="Bookable - Booking Made Simple">
-  <meta property="twitter:description" content="Bookable is a Django app for companies looking to accept bookings online">
-  <meta property="twitter:image" content="https://res.cloudinary.com/daxqnc8yw/image/upload/v1661364639/static/media/social-media-card.151a46799220.jpg">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://mt-bookable.herokuapp.com/">
+    <meta property="twitter:title" content="Bookable - Booking Made Simple">
+    <meta property="twitter:description" content="Bookable is a Django app for companies looking to accept bookings online">
+    <meta property="twitter:image" content="{% static 'media/social-media-card.jpg' %}">
 
-  <!--Load CSS-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/brands.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha256-7ZWbZUAi97rkirk4DcEp4GWDPkWpRMcNaEyXGsNXjLg=" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <!--Load CSS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/brands.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha256-7ZWbZUAi97rkirk4DcEp4GWDPkWpRMcNaEyXGsNXjLg=" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
-  {% if request.path == context.booking_path %}
-  <link rel="stylesheet" href="{% static 'css/jquery.datetimepicker.min.css' %}">
-  {% endif %}
+    {% if request.path == context.booking_path %}
+    <link rel="stylesheet" href="{% static 'css/jquery.datetimepicker.min.css' %}">
+    {% endif %}
 
-  <!--Title-->
-  {% if request.path == context.booking_path %}
-  <title>Bookable - {{ context.company_name }}</title>
-  {% else %}
-  <title>Bookable</title>
-  {% endif %}
-</head>
+    <!--Title-->
+    {% if request.path == context.booking_path %}
+    <title>Bookable - {{ context.company_name }}</title>
+    {% else %}
+    <title>Bookable</title>
+    {% endif %}
+  </head>
 
-<body class="d-flex flex-column h-100 main-bg">
+  <body class="d-flex flex-column h-100 main-bg">
 
-  <!-- Navigation -->
-  <nav class="navbar fixed-top navbar-expand-md text-dark bg-white">
-    <div class="container-sm">
+    <!-- Navigation -->
+    <nav class="navbar fixed-top navbar-expand-md text-dark bg-white">
+      <div class="container-sm">
 
-      <a class="navbar-brand" href="{% url 'home' %}">
-        <span class="brand">Booka</span><span class="thin">ble</span>
-      </a>
+        <a class="navbar-brand" href="{% url 'home' %}">
+          <span class="brand">Booka</span><span class="thin">ble</span>
+        </a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-label="Menu Button" aria-controls="offcanvasNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-label="Menu Button" aria-controls="offcanvasNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
 
-        <div class="offcanvas-header">
-          <p class="offcanvas-title fs-5" id="offcanvasNavbarLabel">Menu</p>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
+          <div class="offcanvas-header">
+            <p class="offcanvas-title fs-5" id="offcanvasNavbarLabel">Menu</p>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
 
-        <div class="offcanvas-body">
-          <!-- Active class based on https://stackoverflow.com/a/55151707 -->
-          {% with request.resolver_match.url_name as url_name %}
-          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item">
-              <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {% if url_name == 'contact' %}active{% endif %}" aria-current="page" href="/contact/">Contact</a>
-            </li>
+          <div class="offcanvas-body">
+            <!-- Active class based on https://stackoverflow.com/a/55151707 -->
+            {% with request.resolver_match.url_name as url_name %}
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'contact' %}active{% endif %}" aria-current="page" href="/contact/">Contact</a>
+              </li>
+              {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'company_account' %}active{% endif %}" href="{% url 'company_account' %}">Account</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'account_logout' %}active{% endif %}" href="{% url 'account_logout' %}">Logout</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'account_signup' %}active{% endif %}" href="{% url 'account_signup' %}">Register</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if url_name == 'account_login' %}active{% endif %}" href="{% url 'account_login' %}">Login</a>
+              </li>
+              {% endif %}
+            </ul>
+            {% endwith %}
+
             {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link {% if url_name == 'company_account' %}active{% endif %}" href="{% url 'company_account' %}">Account</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {% if url_name == 'account_logout' %}active{% endif %}" href="{% url 'account_logout' %}">Logout</a>
-            </li>
+            <span class="navbar-text signed-in">
+              <span>Signed in as:
+            {% if user %}
+              {{ user.first_name }}
             {% else %}
-            <li class="nav-item">
-              <a class="nav-link {% if url_name == 'account_signup' %}active{% endif %}" href="{% url 'account_signup' %}">Register</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {% if url_name == 'account_login' %}active{% endif %}" href="{% url 'account_login' %}">Login</a>
-            </li>
+              {{ context.user.first_name }}
             {% endif %}
-          </ul>
-          {% endwith %}
+            </span>
+            {% endif %}
 
-          {% if user.is_authenticated %}
-          <span class="navbar-text signed-in">
-            <span>Signed in as:
-          {% if user %}
-            {{ user.first_name }}
-          {% else %}
-            {{ context.user.first_name }}
-          {% endif %}
-          </span>
-          {% endif %}
+          </div>
 
         </div>
 
       </div>
+    </nav>
 
-    </div>
-  </nav>
+    <main class="container-fluid mt-sm-5 mb-5 px-0 main-bg">
+      {% block content %}
+      <!-- Body Content -->
+      {% endblock content %}
+    </main>
 
-  <main class="container-fluid mt-sm-5 mb-5 px-0 main-bg">
-    {% block content %}
-    <!-- Body Content -->
-    {% endblock content %}
-  </main>
+    <!-- Footer -->
+    <footer class="footer mt-auto py-3 dark-bg">
+      <div class="container-sm d-flex align-items-center gap-2 gap-md-3">
+        <p class="m-0 text-center text-white">@MTraveller</p>
+        <a class="ms-2 ms-md-3 text-decoration-none" href="https://github.com/MTraveller" target="_blank" aria-label="Github"><i class="fa-brands fa-square-github text-light fs-3 text fst-normal"></i></a>
+        <a class="ms-2 ms-md-3 text-decoration-none" href="https://www.linkedin.com/in/mtantouri/" target="_blank" aria-label="Linkedin"><i class="fa-brands fa-linkedin text-light fs-3 text fst-normal"></i></a>
+      </div>
 
-  <!-- Footer -->
-  <footer class="footer mt-auto py-3 dark-bg">
-    <div class="container-sm d-flex align-items-center gap-2 gap-md-3">
-      <p class="m-0 text-center text-white">@MTraveller</p>
-      <a class="ms-2 ms-md-3 text-decoration-none" href="https://github.com/MTraveller" target="_blank" aria-label="Github"><i class="fa-brands fa-square-github text-light fs-3 text fst-normal"></i></a>
-      <a class="ms-2 ms-md-3 text-decoration-none" href="https://www.linkedin.com/in/mtantouri/" target="_blank" aria-label="Linkedin"><i class="fa-brands fa-linkedin text-light fs-3 text fst-normal"></i></a>
-    </div>
+      <!--Load Scripts-->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha256-DOneOY3n5+xj6Da3AJBkPHxaPynqSlGaZ9790gbBOsE=" crossorigin="anonymous"></script>
 
-    <!--Load Scripts-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha256-DOneOY3n5+xj6Da3AJBkPHxaPynqSlGaZ9790gbBOsE=" crossorigin="anonymous"></script>
+      {% if request.path == "/company/add/" or request.path == "/company/edit/" %}
+      <!--Load Cloudinary & JS/GoogleMaps-->
+      {% include 'company/cloudinary.html' %}
+      {{ google_api_key|json_script:'google_api_key' }}
+      <script src="{% static 'js/google_places.js' %}"></script>
+      {% endif %}
 
-    {% if request.path == "/company/add/" or request.path == "/company/edit/" %}
-    <!--Load Cloudinary & JS/GoogleMaps-->
-    {% include 'company/cloudinary.html' %}
-    {{ google_api_key|json_script:'google_api_key' }}
-    <script src="{% static 'js/google_places.js' %}"></script>
-    {% endif %}
+      {% if request.path == context.booking_path %}
+      <!--Load DateTimePicker & JS/GoogleMaps-->
+      {% load booking_tags %}
+      {% include 'booking/google_api.html' %}
+      {% booking_static %}
+      {% endif %}
 
-    {% if request.path == context.booking_path %}
-    <!--Load DateTimePicker & JS/GoogleMaps-->
-    {% load booking_tags %}
-    {% include 'booking/google_api.html' %}
-    {% booking_static %}
-    {% endif %}
-
-  </footer>
-</body>
+    </footer>
+  </body>
 
 </html>
